--- a/Views/HistorialEstudiantes/Index.cshtml
+++ b/Views/HistorialEstudiantes/Index.cshtml
@@ -4,15 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Nuevo Historial</a>
 </p>
 
 
 <p>
-    <a asp-controller="HistorialEstudiantes" asp-action="ImprimirHistorialEstudiante" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+    <a asp-controller="HistorialEstudiantes" asp-action="ImprimirHistorialEstudiante" target="_blank" class="btn btn-success" >Generar PDF</a>
 </p>
 
 <table class="table">
