--- a/Views/Carreras/Create.cshtml
+++ b/Views/Carreras/Create.cshtml
@@ -21,8 +21,8 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Create</h1>
-                <h4>Carrera</h4>
+              
+                <h1>Carrera</h1>
 
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -36,7 +36,7 @@
 
                     <div class="d-flex justify-content-end">
                         <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-info me-2 w-25" asp-action="Index">Back to List</a>
+                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cancelar</a>
             </div>
         </form>
     </div>
