--- a/Views/FichaCalificacions/Create.cshtml
+++ b/Views/FichaCalificacions/Create.cshtml
@@ -21,8 +21,8 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Create</h1>
-                <h4>FichaCalificacion</h4>
+             
+                <h1>Ficha de Calificación</h1>
 
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -86,7 +86,7 @@
 
                     <div class="d-flex justify-content-end">
                 <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-info me-2 w-25" asp-action="Index">Back to List</a>
+                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cencelar</a>
             </div>
         </form>
     </div>
