--- a/Views/HistorialEstudiantes/Create.cshtml
+++ b/Views/HistorialEstudiantes/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>HistorialEstudiante</h4>
+
+<h1>Historial de Estudiante</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-action="Index">Cancelar</a>
 </div>
 
 @section Scripts {
