--- a/Views/OrdenCompras/Create.cshtml
+++ b/Views/OrdenCompras/Create.cshtml
@@ -21,8 +21,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Create</h1>
-                <h4>OrdenCompra</h4>
+                <h1>Orden de Compra</h1>
 
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -52,8 +51,8 @@
             </div></div></div>
 
                     <div class="d-flex justify-content-end">
-                <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-info me-2 w-25" asp-action="Index">Back to List</a>
+                        <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
+                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cencelar</a>
             </div>
         </form>
     </div>
