--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -2,15 +2,18 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 a {
   color: #0077cc;
 }
+.textoPrincipal {
+    color: #ffffff;
 
+}
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -24,6 +27,7 @@ a {
 }
 
 .border-top {
+
   border-top: 1px solid #e5e5e5;
 }
 .border-bottom {
@@ -31,7 +35,8 @@ a {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    background-color: #808000;
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
