--- a/Views/Tutoriums/Create.cshtml
+++ b/Views/Tutoriums/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Tutorium</h4>
+
+<h1>Tutorial</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -52,7 +52,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-action="Index">Cencelar</a>
 </div>
 
 @section Scripts {
