--- a/Views/Tutoriums/Index.cshtml
+++ b/Views/Tutoriums/Index.cshtml
@@ -5,20 +5,18 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Nuevo Tutorial</a>
 </p>
 
 <p>
-    <a asp-controller="Tutoriums" asp-action="ImprimirTutoria" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+    <a asp-controller="Tutoriums" asp-action="ImprimirTutoria" target="_blank" class="btn btn-success">Generar PDF</a>
 </p>
 <form asp-controller="Tutoriums" asp-action="Index">
     <p>
         Buscar: <input type="text" name="buscar" class="form-text" />
-        <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
-        <a asp-action="Index" class="btn btn-outline-info">Lista completa</a>
+        <input type="submit" value="Buscar" class="btn btn-success" />
+        <a asp-action="Index" class="btn btn-outline-success">Lista completa</a>
     </p>
 </form>
 
