botones reemplazo de menu

--- a/Views/Carreras/Create.cshtml
+++ b/Views/Carreras/Create.cshtml
@@ -24,6 +24,13 @@
               
                 <h1>Carrera</h1>
 
+                <p class="text-end">
+                    <a class="btn btn-success" asp-controller="Carreras" asp-action="Create">Nueva Carrera</a>
+                    <a class="btn btn-outline-success" asp-controller="Carreras" asp-action="Index">Lista de Carreras</a>
+
+                </p>
+                <hr class="LineaRecta" />
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row">
@@ -36,7 +43,7 @@
 
                     <div class="d-flex justify-content-end">
                         <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cancelar</a>
+                        <a class="btn btn-outline-primary me-2 w-25" asp-controller="Registro" asp-action="Auxiliar">Cancelar</a>
             </div>
         </form>
     </div>
