--- a/Views/Estudiantes/Index.cshtml
+++ b/Views/Estudiantes/Index.cshtml
@@ -6,10 +6,15 @@
 }
 
 
+<h1>Lista de Estudiantes</h1>
 
-<p>
-    <a class="btn btn-primary" asp-action="Create">Nuevo Estudiante</a>
+
+<p class="text-end">
+    <a class="btn btn-outline-success" asp-controller="Estudiantes" asp-action="Create">Nuevo Estudiante</a>
+    <a class="btn btn-success" asp-controller="Estudiantes" asp-action="Index">Lista de Estudiantes</a>
+
 </p>
+<hr class="LineaRecta" />
 
 
 <p>
