--- a/Views/FichaCalificacions/Create.cshtml
+++ b/Views/FichaCalificacions/Create.cshtml
@@ -24,6 +24,13 @@
              
                 <h1>Ficha de Calificación</h1>
 
+                <p class="text-end">
+                    <a class="btn btn-success" asp-controller="FichaCalificacions" asp-action="Create">Nueva Ficha de Calificación</a>
+                    <a class="btn btn-outline-success" asp-controller="FichaCalificacions" asp-action="Index">Lista de Fichas de Calificaciones</a>
+
+                </p>
+                <hr class="LineaRecta" />
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row">
@@ -86,7 +93,7 @@
 
                     <div class="d-flex justify-content-end">
                 <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cencelar</a>
+                        <a class="btn btn-outline-primary me-2 w-25" asp-controller="Registro" asp-action="Principal">Cancelar</a>
             </div>
         </form>
     </div>
