--- a/Views/HistorialEstudiantes/Index.cshtml
+++ b/Views/HistorialEstudiantes/Index.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
+<h1>Lista de Historial de Estudiantes</h1>
 
+<p class="text-end">
+    <a class="btn btn-outline-success" asp-controller="HistorialEstudiantes" asp-action="Create">Nuevo Historial de Estudiante</a>
+    <a class="btn btn-success" asp-controller="HistorialEstudiantes" asp-action="Index">Lista de Historial de Estudiantes</a>
 
-<p>
-    <a class="btn btn-primary" asp-action="Create">Nuevo Historial</a>
 </p>
+<hr class="LineaRecta" />
 
 
 <p>
