--- a/Views/OrdenCompras/Create.cshtml
+++ b/Views/OrdenCompras/Create.cshtml
@@ -23,6 +23,13 @@
             <div class="container-fluid px-4">
                 <h1>Orden de Compra</h1>
 
+                <p class="text-end">
+                    <a class="btn btn-success" asp-controller="OrdenCompras" asp-action="Create">Nueva Orden de Compra</a>
+                    <a class="btn btn-outline-success" asp-controller="OrdenCompras" asp-action="Index">Lista de Orden de Compras</a>
+
+                </p>
+                <hr class="LineaRecta" />
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row">
@@ -52,8 +59,8 @@
 
                     <div class="d-flex justify-content-end">
                         <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cencelar</a>
-            </div>
+                        <a class="btn btn-outline-primary me-2 w-25" asp-controller="Registro" asp-action="Principal">Cancelar</a>
+                    </div>
         </form>
     </div>
     </main>
