--- a/Views/Areas/Index.cshtml
+++ b/Views/Areas/Index.cshtml
@@ -5,20 +5,23 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Lista de Areas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
+<p class="text-end">
+    <a class="btn btn-outline-success" asp-controller="Areas" asp-action="Create">Nueva Area</a>
+    <a class="btn btn-success" asp-controller="Areas" asp-action="Index">Lista de Areas</a>
+
 </p>
+<hr class="LineaRecta" />
 
 <p>
-    <a asp-controller="Areas" asp-action="ImprimirArea" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+    <a asp-controller="Areas" asp-action="ImprimirArea" target="_blank" class="btn btn-success">Generar PDF</a>
 
      <form asp-controller="Areas" asp-action="Index">
         <p>
             Buscar: <input type="text" name="buscar" class="form-text" />
-            <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
-            <a asp-action="Index" class="btn btn-outline-info">Lista completa</a>
+            <input type="submit" value="Buscar" class="btn btn-success" />
+            <a asp-action="Index" class="btn btn-outline-success">Lista completa</a>
         </p>
     </form>
 
