--- a/Views/Carreras/Index.cshtml
+++ b/Views/Carreras/Index.cshtml
@@ -6,11 +6,14 @@
     ViewData["Title"] = "Index";
 }
 
+<h1>Lista de Carreras</h1>
 
+<p class="text-end">
+    <a class="btn btn-outline-success" asp-controller="Carreras" asp-action="Create">Nueva Carrera</a>
+    <a class="btn btn-success" asp-controller="Carreras" asp-action="Index">Lista de Carreras</a>
 
-<p>
-    <a class="btn btn-primary" asp-action="Create">NUeva Carrera</a>
 </p>
+<hr class="LineaRecta" />
 
 
 <p>
