--- a/Views/Patrocinadors/Create.cshtml
+++ b/Views/Patrocinadors/Create.cshtml
@@ -6,62 +6,98 @@
 
 <!--<h1>Create</h1>-->
 
-<h4>Patrocinador</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/formularioscrear.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+
+    <div id="layoutSidenav_content">
+        <main>
+            <div class="container-fluid px-4">
+
+                <h1>Registro de Patrocinadores</h1>
+
+
+                <p class="text-end">
+                    <a class="btn btn-success" asp-controller="Patrocinadors" asp-action="Create">Nuevo Patrocinador</a>
+                    <a class="btn btn-outline-success" asp-controller="Patrocinadors" asp-action="Index">Lista de Patrocinadores</a>
+
+                </p>
+                <hr class="LineaRecta" />
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-          
+                    <div class="row">
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="CodigoPais" class="control-label"></label>
                 <select asp-for="CodigoPais" class ="form-control" asp-items="ViewBag.CodigoPais"></select>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="CodigoNivelAcademico" class="control-label"></label>
                 <select asp-for="CodigoNivelAcademico" class ="form-control" asp-items="ViewBag.CodigoNivelAcademico"></select>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
+            </div></div></div>
+                    <div class="row">
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
                 <input asp-for="Apellido" class="form-control" />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
                 <input asp-for="Estado" class="form-control" />
                 <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FotoPerfil" class="control-label"></label>
                 <input asp-for="FotoPerfil" class="form-control" />
                 <span asp-validation-for="FotoPerfil" class="text-danger"></span>
-            </div>
+            </div></div></div>
+                    <div class="row">
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaNacimiento" class="control-label"></label>
                 <input asp-for="FechaNacimiento" class="form-control" />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
                 <input asp-for="FechaCreacion" class="form-control" />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            </div></div></div>
+
+                    <div class="d-flex justify-content-end">
+                        <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
+                        <a class="btn btn-outline-primary me-2 w-25" asp-controller="Registro" asp-action="Auxiliar">Cancelar</a>
             </div>
         </form>
     </div>
+    </main>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</body>
+</html>
