--- a/Views/Profesions/Index.cshtml
+++ b/Views/Profesions/Index.cshtml
@@ -6,23 +6,26 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Lista de Profesiones</h1>
+
+<p class="text-end">
+    <a class="btn btn-outline-success" asp-controller="Profesions" asp-action="Create">Nueva Profesión</a>
+    <a class="btn btn-success" asp-controller="Profesions" asp-action="Index">Lista de Profesiones</a>
+
+</p>
+<hr class="LineaRecta" />
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Profesions" asp-action="ImprimirProfesiones" target="_blank" class="btn btn-success">Generar PDF</a>
 </p>
-
 <form asp-controller="Profesions" asp-action="Index">
     <p>
         Buscar: <input type="text" name="buscar" class="form-text" />
-        <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
-        <a asp-action="Index" class="btn btn-outline-info">Lista completa</a>
+        <input type="submit" value="Buscar" class="btn btn-success" />
+        <a asp-action="Index" class="btn btn-outline-success">Lista completa</a>
     </p>
 </form>
 
-<p>
-    <a asp-controller="Profesions" asp-action="ImprimirProfesiones" target="_blank" class="btn btn-info text-white">Generar PDF</a>
-</p>
 
 <table class="table">
     <thead>
