--- a/Views/TutorTuroriums/Create.cshtml
+++ b/Views/TutorTuroriums/Create.cshtml
@@ -4,33 +4,60 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/formularioscrear.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
 
-<h4>TutorTurorium</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div id="layoutSidenav_content">
+        <main>
+            <div class="container-fluid px-4">
+
+                <h1>Tutor-Tutoría</h1>
+
+
+                <p class="text-end">
+                    <a class="btn btn-success" asp-controller="TutorTuroriums" asp-action="Create">Nuevo Tutor-Tutoría</a>
+                    <a class="btn btn-outline-success" asp-controller="TutorTuroriums" asp-action="Index">Lista de Tutor-Tutoría</a>
+
+                </p>
+                <hr class="LineaRecta" />
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="row">
+                        <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="CodigoTutor" class="control-label"></label>
                 <select asp-for="CodigoTutor" class ="form-control" asp-items="ViewBag.CodigoTutor"></select>
-            </div>
+            </div></div>
+                        <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="CodigoTutoria" class="control-label"></label>
                 <select asp-for="CodigoTutoria" class ="form-control" asp-items="ViewBag.CodigoTutoria"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            </div></div></div>
+
+                    <div class="d-flex justify-content-end">
+                        <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
+                        <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cancelar</a>
+
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
+    </main>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</body>
+</html>
