--- a/Views/HistorialEstudiantes/Index.cshtml
+++ b/Views/HistorialEstudiantes/Index.cshtml
@@ -49,19 +49,19 @@
                 @Html.DisplayFor(modelItem => item.FechaCreacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoCarreraNavigation.CodigoCarrera)
+                @Html.DisplayFor(modelItem => item.CodigoCarreraNavigation.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoEstablecimientoNavigation.CodigoEstablecimiento)
+                @Html.DisplayFor(modelItem => item.CodigoEstablecimientoNavigation.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoEstudianteNavigation.CodigoEstudiante)
+                @Html.DisplayFor(modelItem => item.CodigoEstudianteNavigation.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoGradoNavigation.CodigoGrado)
+                @Html.DisplayFor(modelItem => item.CodigoGradoNavigation.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoNivelAcademicoNavigation.CodigoNivelAcademico)
+                @Html.DisplayFor(modelItem => item.CodigoNivelAcademicoNavigation.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CodigoHistorialEstudiante">Edit</a> |
