--- a/Views/TutorTuroriums/Index.cshtml
+++ b/Views/TutorTuroriums/Index.cshtml
@@ -33,7 +33,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoTutorNavigation.CodigoTutor)
+                @Html.DisplayFor(modelItem => item.CodigoTutorNavigation.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CodigoTutoriaNavigation.CodigoTutoria)
