--- a/Views/Tutors/Index.cshtml
+++ b/Views/Tutors/Index.cshtml
@@ -68,7 +68,7 @@
                 @Html.DisplayFor(modelItem => item.FechaCreacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoProfesionNavigation.CodigoProfesion)
+                @Html.DisplayFor(modelItem => item.CodigoProfesionNavigation.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CodigoTutor">Edit</a> |
