--- a/Views/EstudianteTutoriums/Index.cshtml
+++ b/Views/EstudianteTutoriums/Index.cshtml
@@ -33,7 +33,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoEstudianteNavigation.CodigoEstudiante)
+                @Html.DisplayFor(modelItem => item.CodigoEstudianteNavigation.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CodigoTutoriaNavigation.CodigoTutoria)
