--- a/Views/Estudiantes/Index.cshtml
+++ b/Views/Estudiantes/Index.cshtml
@@ -102,7 +102,7 @@
                 @Html.DisplayFor(modelItem => item.FechaCreacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoComunidadNavigation.CodigoComunidad)
+                @Html.DisplayFor(modelItem => item.CodigoComunidadNavigation.NombreComunidad)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CodigoEstudiante">Edit</a> |
