--- a/Views/FichaCalificacions/Index.cshtml
+++ b/Views/FichaCalificacions/Index.cshtml
@@ -80,13 +80,13 @@
                 @Html.DisplayFor(modelItem => item.ImagenCarta)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoDesempeñoNavigation.CodigoDesempeño)
+                @Html.DisplayFor(modelItem => item.CodigoDesempeñoNavigation.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoEstudianteNavigation.CodigoEstudiante)
+                @Html.DisplayFor(modelItem => item.CodigoEstudianteNavigation.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CodigoPeriodoNavigation.CodigoPeriodo)
+                @Html.DisplayFor(modelItem => item.CodigoPeriodoNavigation.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CodigoFichaCalificacion">Edit</a> |
