--- a/Views/Asignacion/Index.cshtml
+++ b/Views/Asignacion/Index.cshtml
@@ -5,20 +5,20 @@
 <div class="row ">
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="HistorialEstudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+            <a asp-controller="Tutoriums" asp-action="Create">
+                <div class=" card-body primeraTarjetaa1">
                 </div>
-                <div class="card-header textHeader text-center">Actualización de Estudiante</div>
+                <div class="card-header textHeader text-center">Tutoria</div>
             </a>
         </div>
 
     </div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta2">
+            <a asp-controller="Patrocinadors" asp-action="Create">
+                <div class=" card-body primeraTarjetaa2">
                 </div>
-                <div class="card-header textHeader text-center">Benificiarios </div>
+                <div class="card-header textHeader text-center">Estudiantes-Patrocinado </div>
             </a>
         </div>
 
