--- a/Views/Consultas/Index.cshtml
+++ b/Views/Consultas/Index.cshtml
@@ -2,13 +2,14 @@
 
 <hr class="LineaRecta" />
 
+
 <div class="row ">
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="HistorialEstudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjetac001">
                 </div>
-                <div class="card-header textHeader text-center">Actualización de Estudiante</div>
+                <div class="card-header textHeader text-center"> Nomina general</div>
             </a>
         </div>
 
@@ -16,9 +17,54 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta2">
+                <div class=" card-body primeraTarjetac002">
                 </div>
-                <div class="card-header textHeader text-center">Benificiarios </div>
+                <div class="card-header textHeader text-center">Ficha de Calificaciones </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Estudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetac003">
+                </div>
+                <div class="card-header textHeader text-center">Tutores </div>
+            </a>
+        </div>
+
+    </div>
+
+</div>
+
+
+<div class="row ">
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="HistorialEstudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetac004">
+                </div>
+                <div class="card-header textHeader text-center"> Tutorias</div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Estudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetac005">
+                </div>
+                <div class="card-header textHeader text-center">Gastos </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Estudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetac006">
+                </div>
+                <div class="card-header textHeader text-center">Usuarios </div>
             </a>
         </div>
 
