--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -145,3 +145,95 @@ body {
     height: 150px;
     /* background-color: #ffd800;*/
 }
+
+.primeraTarjetaa1 {
+    background-image: url("../images/a1.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetaa2 {
+    background-image: url("../images/a2.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetac1 {
+    background-image: url("../images/c1.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetac2 {
+    background-image: url("../images/c2.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+
+.primeraTarjetai1 {
+    background-image: url("../images/i1.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetai2 {
+    background-image: url("../images/i2.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetai3{
+    background-image: url("../images/i3.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetai4 {
+    background-image: url("../images/i4.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetai5{
+    background-image: url("../images/i5.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+
+
+.primeraTarjetac001 {
+    background-image: url("../images/c001.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetac002 {
+    background-image: url("../images/c002.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetac003 {
+    background-image: url("../images/c003.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetac004 {
+    background-image: url("../images/c004.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+
+.primeraTarjetac005 {
+    background-image: url("../images/c005.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
+.primeraTarjetac006 {
+    background-image: url("../images/c006.jpg");
+    height: 150px;
+    /* background-color: #ffd800;*/
+}
