--- a/Views/Compra/Index.cshtml
+++ b/Views/Compra/Index.cshtml
@@ -6,9 +6,9 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="HistorialEstudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjetac1">
                 </div>
-                <div class="card-header textHeader text-center">Actualización de Estudiante</div>
+                <div class="card-header textHeader text-center">Registro</div>
             </a>
         </div>
 
@@ -16,9 +16,9 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta2">
+                <div class=" card-body primeraTarjetac2">
                 </div>
-                <div class="card-header textHeader text-center">Benificiarios </div>
+                <div class="card-header textHeader text-center">Informe </div>
             </a>
         </div>
 
