--- a/Views/Informe/Index.cshtml
+++ b/Views/Informe/Index.cshtml
@@ -6,9 +6,9 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="HistorialEstudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjetai1">
                 </div>
-                <div class="card-header textHeader text-center">Actualización de Estudiante</div>
+                <div class="card-header textHeader text-center"> Nomina General</div>
             </a>
         </div>
 
@@ -16,9 +16,46 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta2">
+                <div class=" card-body primeraTarjetai2">
                 </div>
-                <div class="card-header textHeader text-center">Benificiarios </div>
+                <div class="card-header textHeader text-center">Ficha de Calificaciones </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Estudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetai3">
+                </div>
+                <div class="card-header textHeader text-center">Ficha Informativa </div>
+            </a>
+        </div>
+
+    </div>
+
+</div>
+
+
+
+
+<div class="row ">
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="HistorialEstudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetai4">
+                </div>
+                <div class="card-header textHeader text-center">Lista de Tutorias</div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Estudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjetai5">
+                </div>
+                <div class="card-header textHeader text-center">Formatos de Informe </div>
             </a>
         </div>
 
