--- a/Views/FichaCalificacions/Create.cshtml
+++ b/Views/FichaCalificacions/Create.cshtml
@@ -31,7 +31,7 @@
                 </p>
                 <hr class="LineaRecta" />
 
-        <form asp-action="Create">
+                <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row">
                         <div class="col-md-4">
@@ -75,19 +75,19 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenFicha" class="control-label"></label>
-                <input asp-for="ImagenFicha" class="form-control" />
+                <input asp-for="ImagenFicha" class="form-control" name="imgFicha" id="imgFicha" type="file"/>
                 <span asp-validation-for="ImagenFicha" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenEstudiante" class="control-label"></label>
-                <input asp-for="ImagenEstudiante" class="form-control" />
+                <input asp-for="ImagenEstudiante" class="form-control" name="imgEstudiante" id="imgEstudiante" type="file"/>
                 <span asp-validation-for="ImagenEstudiante" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenCarta" class="control-label"></label>
-                <input asp-for="ImagenCarta" class="form-control" />
+                <input asp-for="ImagenCarta" class="form-control" name="imgCarta" id="imgCarta" type="file" />
                 <span asp-validation-for="ImagenCarta" class="text-danger"></span>
             </div></div></div>
 
