--- a/Views/FichaCalificacions/Edit.cshtml
+++ b/Views/FichaCalificacions/Edit.cshtml
@@ -24,7 +24,7 @@
 
                 <h1 class="text-center">Editar Ficha de Calificación</h1>
 
-        <form asp-action="Edit">
+                <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CodigoFichaCalificacion" />
                     <div class="row">
@@ -72,26 +72,50 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenFicha" class="control-label"></label>
-                <input asp-for="ImagenFicha" class="form-control" />
-                <span asp-validation-for="ImagenFicha" class="text-danger"></span>
+                 <input  class="form-control" name="imgFicha" id="imgFicha" type="file" />
+                <span class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenEstudiante" class="control-label"></label>
-                <input asp-for="ImagenEstudiante" class="form-control" />
-                <span asp-validation-for="ImagenEstudiante" class="text-danger"></span>
+                 <input class="form-control" name="imgEstudiante" id="imgEstudiante" type="file" />
+                <span  class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenCarta" class="control-label"></label>
-                <input asp-for="ImagenCarta" class="form-control" />
-                <span asp-validation-for="ImagenCarta" class="text-danger"></span>
+                 <input  class="form-control" name="imgCarta" id="imgCarta" type="file" />
+                <span  class="text-danger"></span>
             </div></div></div>
+            <div class="row">
+                        <div class="col-md-4">
+            <div class="form-group">
+                <label asp-for="ImagenFicha" class="control-label"></label>
+                <input asp-for="ImagenFicha" class="form-control" readonly hidden />
+                <img src="@Model.ImagenFicha" class="img-thumbnail" width="200" />
+                <span asp-validation-for="ImagenFicha" class="text-danger"></span>
+            </div></div>
+             <div class="form-group">
+                <label asp-for="ImagenEstudiante" class="control-label"></label>
+                <input asp-for="ImagenEstudiante" class="form-control" readonly hidden />
+                <img src="@Model.ImagenEstudiante" class="img-thumbnail" width="200" />
+                <span asp-validation-for="ImagenEstudiante" class="text-danger"></span>
+            </div>
+                </div>
+             <div class="col-md-4">
+            <div class="form-group">
+                <label asp-for="ImagenCarta" class="control-label"></label>
+                <input asp-for="ImagenCarta" class="form-control" readonly hidden />
+                <img src="@Model.ImagenCarta" class="img-thumbnail" width="200" />
+                <span asp-validation-for="ImagenCarta" class="text-danger"></span>
+            </div>
+            </div>
 
                     <div class="d-flex justify-content-end">
                         <input type="submit" value="Guardar cambios" class="btn btn-primary me-2 w-25" />
                         <a class="btn btn-outline-primary me-2 w-25" asp-action="Index">Cancelar</a>
             </div>
+
         </form>
     </div>
     </main>
