--- a/Views/Estudiantes/Create.cshtml
+++ b/Views/Estudiantes/Create.cshtml
@@ -45,32 +45,32 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-               <input asp-for="Nombre" class="form-control" data-val-required="Por favor, complete este campo." />
+               <input asp-for="Nombre" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div></div>
             <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                                <input asp-for="Apellido" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaNacimieto" class="control-label"></label>
-                <input asp-for="FechaNacimieto" class="form-control" />
+                                <input asp-for="FechaNacimieto" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaNacimieto" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Genero" class="control-label"></label>
-                <input asp-for="Genero" class="form-control" />
+                                <input asp-for="Genero" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                                <input asp-for="Estado" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
@@ -78,33 +78,33 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Sector" class="control-label"></label>
-                <input asp-for="Sector" class="form-control" />
+                                <input asp-for="Sector" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Sector" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="NumeroCasa" class="control-label"></label>
-                <input asp-for="NumeroCasa" class="form-control" />
+                                <input asp-for="NumeroCasa" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="NumeroCasa" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-12">
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
-                <textarea asp-for="Descripcion" class="form-control campo-descripcion"></textarea>
+                                <textarea asp-for="Descripcion" class="form-control campo-descripcion" data-val-required="Complete este campo."></textarea>
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FotoPerfil" class="control-label"></label>
-                <input asp-for="FotoPerfil" class="form-control" />
+                                <input asp-for="FotoPerfil" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FotoPerfil" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
-                <input asp-for="FechaCreacion" class="form-control" />
+                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div></div></div>
 
