--- a/Views/FichaCalificacions/Create.cshtml
+++ b/Views/FichaCalificacions/Create.cshtml
@@ -53,13 +53,13 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaEntrega" class="control-label"></label>
-                <input asp-for="FechaEntrega" class="form-control" />
+                                <input asp-for="FechaEntrega" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaEntrega" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Notas" class="control-label"></label>
-                <input asp-for="Notas" class="form-control" />
+                                <input asp-for="Notas" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Notas" class="text-danger"></span>
             </div></div>
                         <div class="form-group">
@@ -68,26 +68,26 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Promedio" class="control-label"></label>
-                <input asp-for="Promedio" class="form-control" readonly data-val-required="Por favor, complete este campo." />
+                                <input asp-for="Promedio" class="form-control" readonly data-val-required="Complete este campo." />
                 <span asp-validation-for="Promedio" class="text-danger" ></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenFicha" class="control-label"></label>
-                <input asp-for="ImagenFicha" class="form-control" />
+                                <input asp-for="ImagenFicha" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImagenFicha" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenEstudiante" class="control-label"></label>
-                <input asp-for="ImagenEstudiante" class="form-control" />
+                                <input asp-for="ImagenEstudiante" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImagenEstudiante" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenCarta" class="control-label"></label>
-                <input asp-for="ImagenCarta" class="form-control" />
+                                <input asp-for="ImagenCarta" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImagenCarta" class="text-danger"></span>
             </div></div></div>
 
