--- a/Views/HistorialEstudiantes/Create.cshtml
+++ b/Views/HistorialEstudiantes/Create.cshtml
@@ -66,7 +66,7 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
-                <input asp-for="FechaCreacion" class="form-control" />
+                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div></div></div>
 
